# AetherionEngine

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: shaders.cmake
documentation/: CMakeLists.txt
examples/: CMakeLists.txt
examples/triangle/: CMakeLists.txt
examples/triangle/source/: main.cpp
include/aetherion/gpu/: gpu_engine.hpp  render_engine.hpp  render_window.hpp
include/aetherion/gpu/backend/: buffer.hpp  buffer_view.hpp  command_buffer.hpp  descriptor_set.hpp  device.hpp  driver.hpp  image.hpp  image_view.hpp  memory.hpp  pipeline.hpp  queue.hpp  render_definitions.hpp  resource.hpp  sampler.hpp  shader.hpp  surface.hpp  swapchain.hpp  sync.hpp
include/aetherion/graphics/: render_engine.hpp
include/aetherion/graphics/backend/: buffer.hpp  buffer_view.hpp  command_buffer.hpp  descriptor_set.hpp  device.hpp  driver.hpp  image.hpp  image_view.hpp  pipeline.hpp  queue.hpp  render_definitions.hpp  resource.hpp  sampler.hpp  shader.hpp  surface.hpp  swapchain.hpp  sync.hpp
include/aetherion/platform/: window.hpp  window_manager.hpp
include/aetherion/util/: common_definitions.hpp  flags.hpp  result_value.hpp
source/gpu/: gpu_engine.cpp
source/gpu/backend/: buffer.cpp  buffer_view.cpp  command_buffer.cpp  descriptor_set.cpp  device.cpp  driver.cpp  image.cpp  image_view.cpp  memory.cpp  pipeline.cpp  queue.cpp  resource.cpp  sampler.cpp  shader.cpp  surface.cpp  swapchain.cpp  sync.cpp
source/gpu/backend/vulkan/: vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_buffer_view.cpp  vulkan_buffer_view.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_descriptor_set.cpp  vulkan_descriptor_set.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_driver.cpp  vulkan_driver.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_image_view.cpp  vulkan_image_view.hpp  vulkan_memory.cpp  vulkan_memory.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_queue.cpp  vulkan_queue.hpp  vulkan_render_definitions.hpp  vulkan_sampler.cpp  vulkan_sampler.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_surface.cpp  vulkan_surface.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_sync.hpp
source/graphics/backend/: buffer.cpp  buffer_view.cpp  command_buffer.cpp  descriptor_set.cpp  device.cpp  driver.cpp  image.cpp  image_view.cpp  pipeline.cpp  queue.cpp  resource.cpp  sampler.cpp  shader.cpp  surface.cpp  swapchain.cpp  sync.cpp
source/graphics/backend/vulkan/: vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_buffer_view.cpp  vulkan_buffer_view.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_descriptor_set.cpp  vulkan_descriptor_set.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_driver.cpp  vulkan_driver.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_image_view.cpp  vulkan_image_view.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_queue.cpp  vulkan_queue.hpp  vulkan_render_definitions.hpp  vulkan_sampler.cpp  vulkan_sampler.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_surface.cpp  vulkan_surface.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_sync.cpp  vulkan_sync.hpp
source/platform/: window.cpp  window_manager.cpp
source/platform/glfw/: glfw_window.cpp  glfw_window.hpp  glfw_window_manager.cpp  glfw_window_manager.hpp
test/: CMakeLists.txt
test/source/: greeter.cpp
